used Integer.valueof(int) instead of new Integer(int) to allow caching of values by the compiler. also made the zero check check the original int == 0 not the string.equals("0")